2013-02-09      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  build rules changed to enable gm2 to be built
	  with gcc-4.7.1.
	* gm2/NEWS:  minor version number change.
	* gm2/config-lang.in:  removed gcc-3.x.y version checking.
	* gm2/configure:  rebuilt.
	* gm2/configure.in:  updated as gccgm2.c is no longer used.
	* gm2/gccgm2.c:  (removed).  The contents of this 12000 line file
	  have been replaced by the modular equivalent in gm2/gm2-gcc/*.[ch]
	* gm2/gm2-common.h:  (removed).
	* gm2/gm2-common.c:  (removed).
	* gm2/gm2-lang.c:  changed to use the gm2/gm2-gcc structure and gcc-4.7.1.
	* gm2/gm2-lang.h:  changed to use the gm2/gm2-gcc structure and gcc-4.7.1.
	* gm2/gm2-tree.def:  removed THROW_EXPR, TRY_BLOCK, HANDLER, EXPR_STMT definitions.
	* gm2/gm2-tree.h:  commented out the language tree code.
	* gm2/gm2.texi:  modified to reflect library command line switch changes between
	 1.0.1 and 1.0.4.  Improved the assembly language example together with an explanation.
	 Added alignment information.  Updated the Solaris building instructions.
	* gm2/gm2config.h.in:  (updated to reflect gcc-4.7.1).
	* gm2/gm2spec.c:    (updated to reflect gcc-4.7.1).
	* gm2/lang-options.h:  changed -fverbose-unbounded to -Wverbose-unbounded.
	* gm2/lang.opt:  changed so that libraries dialects can be ordered.
	* gm2/m2.flex:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.
	* gm2/m2pp.c:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.
	* gm2/p2crc:  added many more AvoidNames to avoid conflicts with C header files.
	* gm2/version.c:  updated to 1.0.5.
	* gm2/bnf/gm2l.bnf:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.
	* gm2/bnf/gm2m.bnf:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.
	* gm2/bnf/m2-2.bnf:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.
	* gm2/bnf/m2-3.bnf:  updated to reflect gcc-4.7.1 and the new gm2/gm2-gcc structure.